--- a/CYTHON_Jacobi_Multiprocessed.ipynb
+++ b/CYTHON_Jacobi_Multiprocessed.ipynb
@@ -32,15 +32,15 @@
     "\n",
     "Testing is done by creating an array of 4K resolution (2160 x 3840 => 8,294,400 elements) (on my AMD 5950x with all cores at 4.6 Ghz this took around 4 minutes) and a Mask of the appropriate size.\n",
     "\n",
-    "    !!Note: This test was done at 1080p resolution so that it runs a bit faster on other machines.\n",
+    "    !!Note: This test can be done at 1080p resolution so that it runs a bit faster on other machines. Just remember to input the correct paramteres everywhere\n",
     "\n",
-    "The potential is filled with 4 circular Electrodes in symmetrical positions set to 10 Volts and 5 Volts. The indeces where these Electrodes are represented in the Potential Array in, are also representing of ='0' Elements in our Mask. After all the Electrodes are Static and we only need to calculate the Electric Field/Potential around them. (They represent Dirichlet conditions). The Edges of the"
+    "The potential is filled with 2 Electrodes. 1 Annulus set to +30 V and one filled Circle inside it set at -35 V. The indeces where these Electrodes are represented in the Potential Array, are also representing equal = '0' Elements in our Mask. After all,  the Electrodes are Static and we only need to calculate the Electric Field/Potential around them. (They represent Dirichlet conditions). The Edges of the electrodes can also become Neuman boundaries or mixed boundaries, but that is a work in progress."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2fd2505",
+   "id": "34bd5017",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "78a035ff",
+   "id": "ce4f4b69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b682b71b",
+   "id": "89fa04bc",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "44e841f1",
+   "id": "80eaa7f0",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d291259a",
+   "id": "b1a6fccf",
    "metadata": {},
    "outputs": [
     {
