--- a/CYTHON_Jacobi_Multiprocessed.ipynb
+++ b/CYTHON_Jacobi_Multiprocessed.ipynb
@@ -16,16 +16,24 @@
     "\n",
     "- The 'display' function uses the PIL.Image and takes a 2D array as input to translate into an image. The np.uint8 is the color scheme and bit depth\n",
     "\n",
+    "\n",
     "- The 'jacobi_iteration' performs one full sweep of a given array representation. It has no return so we define it as a void function. It takes as input a 2D array A of 64bit float numbers, and an integer Mask. The Mask serves as a literal Masking method for Dirichlet boundary conditions. Where mask[i,j] = 0 the function will not iterate over. These represent constant values in our Potential A (hence Dirichlet boundary conditions). The Method is being worked on to incorporate Neuman and Mixed B.C. This is where the Multiprocessing happens. There are 2 ways of doing this. Row-Major or Column-Major. You can assign the prange operator in the first for loop. In this case one core will be occupied iterating a whole column by itself, while other cores iterate the next Columns independantly. This is the Row-Major case. In puting the prange operator in the second for loop, the core will iterate each element of the Column independently (remember for1 iterates rows, for2 iterates inside columns), and essentially the next Row gets iterated when all core-workers are done doing this single Column.\n",
     "    ~The reason why you should put the prange in the First For loop is simple. The overhead to call CPU workers might be larger than the amount of time needed to iterate a whole column. So by the time Windows calls for example 15 more CPU cores to solve Algebra on the second iteration of the 'j' loop, that 1 Core that started iterating that 'j' Column is already done doing the Algebra that the other 16 cores are getting called for, and the second for loop over 'i' begins since the'j' are done. Now Windows has to spend the same amount of time calling 15 Cores while Core 1 already finished iteration nr.2 over 'i'. Putting prange in the first loop mitigates this, because we are guaranteed that the other cores are called to iterate over 'i' and not over 'j' (You have no conflict of interest).\n",
     "       Note!!! => Because this function iterates from 1 => n/m-1 It always represents edges as Dirichlet B.c. This allows us to use them as Ghost Indeces for Neuman B.c where we need to adjust the values to match a derivative of choice.\n",
     "       For example A[0] = A[3] means\n",
+    "       \n",
+    "       \n",
     "$$\n",
     "\\dfrac{d}{dx}=0\n",
     "$$\n",
+    "\n",
+    "\n",
     "    In this specific function i will use the Boundaries as static Dirichlet conditions with cosinus functions on them.\n",
     "    Yes color scaling in PIL is hell but matplotlib does not support full resolution render and saving with simple syntax.\n",
     "- The 'Jacobi_fx' uses the 'jacobi_iteration' continiously until a certain number of maximum iterations is reached, or until a convergence criterion is reached. This is represented by the 'error' variable. It is measured by doing the L2 Norm of the array, saving it, then calculating the difference with the L2 norm of the next iteration. Once the L2 norm is small enough (represented by our given error) the iterations stop. The function returns the potential A, the number of iterations and the reached error.\n",
+    "\n",
+    "\n",
+    "- The 'create_circle' function takes as input an array/Matrix and a Mask matrix along with center coordinates of a circle relative to the index coordinates. It uses the Indexes as the drawing Field along with the mathematical Circle equation x**2 + y**2 = r**2 to fill the insides of a circle of radius R centered at (x,y). Where x and y are given in index coordinates (i.e they cannot exceed the maximum resolution number -1). The function can be used to fill or hollow out aswell by setting the value to 0 and the mask int to 1 so that is is set as a field coordinate again and not a Dirichlet condition.\n",
     "\n",
     "The 'Jacobi_fx' has to be defined a cPython function because it will ideally be called in another script if you are working with .pyx files or in other Cells if you are using Jupyter. Same argument for the 'display' function\n",
     "\n",
@@ -40,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "34bd5017",
+   "id": "4f2bc793",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ce4f4b69",
+   "id": "a8e1ea24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "89fa04bc",
+   "id": "a80d4c17",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "80eaa7f0",
+   "id": "f3efc8dd",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b1a6fccf",
+   "id": "24fb3dc4",
    "metadata": {},
    "outputs": [
     {
