--- a/CYTHON_Jacobi_Multiprocessed.ipynb
+++ b/CYTHON_Jacobi_Multiprocessed.ipynb
@@ -186,7 +186,7 @@
     "@cython.wraparound(False)\n",
     "@cython.initializedcheck(False)\n",
     "@cython.nonecheck(False)\n",
-    "cdef void create_circle(double[:,:] matrix, double[:,:] mask, double x, double y, double radius, double value, double m_value, str param):\n",
+    "cpdef void create_circle(double[:,:] matrix, double[:,:] mask, double x, double y, double radius, double value, double m_value, str param):\n",
     "    operators = {'>': operator.gt,\n",
     "           '<': operator.lt,\n",
     "           '>=': operator.ge,\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eba9b79",
+   "id": "80c6177f",
    "metadata": {},
    "source": [
     "### Iteration nr.1\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e702bb0",
+   "id": "c37c2ae5",
    "metadata": {},
    "source": [
     "# WTF IS THAT ???!! All masks in the mask_sample are correct. "
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "216efe8a",
+   "id": "3dcaf0aa",
    "metadata": {},
    "outputs": [],
    "source": []
