--- a/CYTHON_Jacobi_Up_cycle.ipynb
+++ b/CYTHON_Jacobi_Up_cycle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f775b72d",
+   "id": "9815fd37",
    "metadata": {},
    "source": [
     "# This is a public notebook example on using the explicit Jacobi iteration and the V_cycle for the 2D electrostatic potential Problem.\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "488c7213",
+   "id": "96fd1184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b89714e",
+   "id": "4a979aa7",
    "metadata": {},
    "source": [
     "### A brief explanation on usage:\n",
@@ -306,7 +306,7 @@
     "\n",
     "Initialize the empty potential at this resolution with potential = np.zeros(res) aswell as the mask\n",
     "\n",
-    "~~~ The rest of the variables are optional"
+    "The rest of the variables are optional"
    ]
   },
   {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da4d50a7",
+   "id": "d9057799",
    "metadata": {},
    "source": [
     "## Now we can fill The World with objects.\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b51f5f",
+   "id": "7f77c9b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -383,14 +383,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccbd58bb",
+   "id": "e851a5c9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7049e501",
+   "id": "fe57edc2",
    "metadata": {},
    "source": [
     "### The lines below get executed in order\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307bd812",
+   "id": "4ce4b991",
    "metadata": {},
    "source": [
     "### Now let's call the solver Jacobi_fx to test this.\n",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8069741a",
+   "id": "e5dad866",
    "metadata": {},
    "source": [
     "# !Running the line below will Benchmark Your CPU. It might take a while. Open some Telemetry and relax :)"
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc3193b",
+   "id": "c4413899",
    "metadata": {},
    "source": [
     "### After finishing, a \"Wall Time\" text appears exectuion time. result[0] holds the actual result. While result[1 and 2] hold the iteration nr and error\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b5a617b3",
+   "id": "c5d8b6b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbeb849",
+   "id": "92873f20",
    "metadata": {
     "scrolled": true
    },
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc9ac0cf",
+   "id": "e42575c4",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c221b8",
+   "id": "7770450c",
    "metadata": {},
    "source": [
     "Now we want to try the more advanced Up_cycle multigrid method. It will take in a certain nr of allowed downscale samples, a number of iterations and a truncation factor.\n",
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dbc3861",
+   "id": "d925486c",
    "metadata": {},
    "source": [
     "# Before running the cell below make sure you re-run the Cell that defines the geometries\n",
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fea8184",
+   "id": "a85ca52f",
    "metadata": {},
    "source": [
     "### Need to look into a convergence algorithm and implement the SOR"
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3232c79a",
+   "id": "2562a32a",
    "metadata": {},
    "outputs": [],
    "source": []
