--- a/CYTHON_Jacobi_Up_cycle.ipynb
+++ b/CYTHON_Jacobi_Up_cycle.ipynb
@@ -422,27 +422,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "e766e815",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "((<MemoryView of 'array' at 0x24a377346c0>, 0.09375, 2943),\n",
-       " 208768.52,\n",
-       " 33177600)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<MemoryView of 'array' object>\n",
+      "Achieved error: 0.09375\n",
+      "Required iterations: 2943\n",
+      "Final Array L2-norm: 208768.515625\n",
+      "Array size in MB: 33.1776 MegaBytes\n"
+     ]
     }
    ],
    "source": [
-    "result, np.linalg.norm(result[0]), result[0].nbytes"
+    "print(f\"{result[0]}\\nAchieved error: {result[1]}\\nRequired iterations: {result[2]}\\nFinal Array L2-norm: {np.linalg.norm(result[0])}\\nArray size in MB: {result[0].nbytes*1e-6} MegaBytes\")"
    ]
   },
   {
@@ -475,10 +474,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "plt.figure(figsize=(25, 14.0625))\n",
-    "\n",
     "plt.imshow(result[0], interpolation='none', cmap='twilight_shifted')\n",
     "plt.colorbar()"
    ]
