--- a/CYTHON_SOR_electrodynamics.ipynb
+++ b/CYTHON_SOR_electrodynamics.ipynb
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "8173a3e4",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "%%cython \n",
+    "%%cython\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('dark_background')\n",
@@ -99,7 +99,7 @@
     "@cython.initializedcheck(False)\n",
     "@cython.nonecheck(False)\n",
     "cdef void jacobi_iteration(int n, int m, dtype_t[:,:] new_array, dtype_t[:,:] old_array, dtype_t[:,:] mask) nogil:\n",
-    "    cdef Py_ssize_t i, j\n",
+    "    cdef size_t i, j\n",
     "    cdef double tmp\n",
     "    for i in prange(1, n-1, nogil=True):\n",
     "        for j in prange(1, m-1):\n",
@@ -115,7 +115,8 @@
     "cpdef tuple jacobi_fx(dtype_t[:,:] A, dtype_t[:,:] mask, int max_iterations, dtype_t error):\n",
     "    cdef int i, n, m, iteration\n",
     "    cdef double norm, norm_prev, tmp_error\n",
-    "    n, m = A.shape[0], A.shape[1]\n",
+    "    n = A.shape[0]\n",
+    "    m = A.shape[1]\n",
     "    cdef dtype_t[:,:] new_arr = A.copy()\n",
     "    cdef dtype_t[:,:] old_arr = A.copy()\n",
     "    norm_prev = 0\n",
@@ -140,7 +141,7 @@
     "@cython.initializedcheck(False)\n",
     "@cython.nonecheck(False)\n",
     "cdef void sor(int n, int m, dtype_t[:,:] GS_arr, dtype_t[:,:] mask, dtype_t alpha) nogil:\n",
-    "    cdef Py_ssize_t i, j\n",
+    "    cdef size_t i, j\n",
     "    for i in prange(1, n-1, nogil=True):\n",
     "        for j in prange(1, m-1):\n",
     "            if not mask[i, j]:\n",
@@ -159,7 +160,8 @@
     "    norm_prev = 0\n",
     "    norm = 0\n",
     "    iteration = 0\n",
-    "    n, m = A.shape[0], A.shape[1]\n",
+    "    n = A.shape[0]\n",
+    "    m = A.shape[1]\n",
     "    cdef dtype_t[:,:] GS_matrix = A.copy()\n",
     "    alpha_ideal = 1.976/(1+(pi/sqrt(n*m)))\n",
     "    if alpha == 0:\n",
@@ -223,7 +225,7 @@
     "@cython.initializedcheck(False)\n",
     "@cython.nonecheck(False)\n",
     "cdef void set_dirichlet(dtype_t[:,:] array, dtype_t[:,:] mask) nogil:\n",
-    "    cdef Py_ssize_t i, j\n",
+    "    cdef size_t i, j\n",
     "    cdef int rows = array.shape[0]\n",
     "    cdef int cols = array.shape[1]\n",
     "    for i in range(rows):\n",
@@ -291,7 +293,7 @@
     "@cython.initializedcheck(False)\n",
     "@cython.nonecheck(False)\n",
     "cpdef void create_circle(dtype_t[:,:] matrix, dtype_t[:,:] mask, dtype_t x, dtype_t y, dtype_t radius, dtype_t value, dtype_t m_value, str param):\n",
-    "    cdef Py_ssize_t i, j\n",
+    "    cdef size_t i, j\n",
     "    cdef int rows = matrix.shape[0]\n",
     "    cdef int cols = matrix.shape[1]\n",
     "    for i in range(rows):\n",
@@ -307,7 +309,7 @@
     "@cython.initializedcheck(False)\n",
     "@cython.nonecheck(False)\n",
     "cpdef void create_rectangle(dtype_t[:,:] matrix, dtype_t[:,:] mask, dtype_t x, dtype_t y, dtype_t width, dtype_t height, dtype_t value, dtype_t m_value, str param):\n",
-    "    cdef int i, j\n",
+    "    cdef size_t i, j\n",
     "    cdef int rows = matrix.shape[0]\n",
     "    cdef int cols = matrix.shape[1]\n",
     "    cdef double left = x - width / 2\n",
